-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4, 6.5
-
None
-
-
988c7bfca (dev), 49cfc516e (6.5)
Open/close inspector while a wasm app is running. You will eventually see this in the console:
Uncaught RuntimeError: Aborted(native code called abort()) at abort (eval at completeLoadEmscriptenModule (qtloader.js:457:9), <anonymous>:1500:11) at _abort (eval at completeLoadEmscriptenModule (qtloader.js:457:9), <anonymous>:5993:7) at qAbort() (qglobal.cpp:161:5) at qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&) (qlogging.cpp:2041:5) at QMessageLogger::fatal(char const*, ...) const (qlogging.cpp:930:5) at qt_assert(char const*, char const*, int) (qassert.cpp:68:14) at QWasmEventTranslator::translateKeyEvent(int, EmscriptenKeyboardEvent const*) (qwasmeventtranslator.cpp:327:17) at QWasmCompositor::processKeyboard(int, EmscriptenKeyboardEvent const*) (qwasmcompositor.cpp:338:47) at QWasmCompositor::keyboard_cb(int, EmscriptenKeyboardEvent const*, void*) (qwasmcompositor.cpp:318:45) at Object.keyEventHandlerFunc [as handlerFunc] (eval at completeLoadEmscriptenModule (qtloader.js:457:9), <anonymous>:10440:44)
| For Gerrit Dashboard: QTBUG-109629 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 450562,2 | Fix the handling of dead keys on WASM | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 450751,2 | Fix the handling of dead keys on WASM | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |